tests/snapshots/snapshots__property_with_proofs.snap
---
source: tests/snapshots.rs
expression: content
---
# Key Lifecycle Safety

> **How to read these verdicts.** A property's ✓ means a solver discharged the logical claim against the **Cryptol model**. That guarantee carries over to the compiled implementation only when every function the property mentions *also* has a SAW equivalence proof — surfaced below each property as an **Implementation equivalence** callout. A green property over a partly-proven function set still tells you the design is sound; it does **not** by itself certify the binary.

### ✓ P1 — Key Monotonicity

P1: Key Monotonicity. Once a key is active, any subsequent activation
attempt returns AlreadyActive. We model "the activation outcome when the
key is already active" as a function of the activation oracle; the spec
states this as an invariant on activationResult, which we express as:
for any inputs, if the system reports the key is active then [enrollDevice](../functions/enrollDevice.md)
can never return Succeeded.

> **Proof details** — discharged with `z3`.
>
> Used 1 override — each is **trusted** to behave per its spec and not re-verified here:
> - `memcmp`
>
> Solver wall-clock: 0.42s.

### Verify this yourself

Re-run the proof locally:

```sh
saw "verify_out/out_P1/verify.saw"
```

Script: `verify_out/out_P1/verify.saw`

### Generated SAW verification script

This is the complete script used for this verdict, embedded here so the proof remains auditable without a local <code>verify_out</code> directory.

<details><summary>Show complete generated script · includes 1 trusted contract</summary>

```saw
// Step 1: Load bitcode
m <- llvm_load_module "key_store.bc";

// Step 2: Bitcode-derived extern overrides
// override: memcmp  [declare-only]
let memcmp_spec = do {
    llvm_execute_func [];
    llvm_return (llvm_term {{ 0 : [32] }});
};
ov_memcmp <- llvm_unsafe_assume_spec m "memcmp" memcmp_spec;

// Step 3: Verify property
prove_print abc P1;
```

<button type="button" class="btn btn-default btn-xs" aria-label="Copy exact SAW contract" onclick="navigator.clipboard.writeText(this.previousElementSibling.textContent)">Copy exact SAW</button>

</details>

<details><summary>Formal property (Cryptol)</summary>

```haskell
isAuthResult authResult ==>
keyAlreadyActive ==>
enrollDevice fleetEnabled validMetadata authResult AC_AlreadyActive
!= ER_Succeeded
```

</details>

**Involved:** [`AC_AlreadyActive`](../types.md#activationresult), [`ER_Succeeded`](../types.md#enrollmentresult), [`enrollDevice`](../functions/enrollDevice.md)

### ✓ P2 — Active Prevents Provisioning

P2: Active prevents provisioning.

<details><summary>Formal property (Cryptol)</summary>

```haskell
isKeyVaultResult vaultResult ==>
fleetEnabled ==>
validRequest ==>
vaultResult == KV_Ok ==>
provisionKey fleetEnabled validRequest vaultResult True
== PR_Unauthorized
```

</details>

**Involved:** [`KV_Ok`](../types.md#keyvaultresult), [`PR_Unauthorized`](../types.md#provisionresult), [`provisionKey`](../functions/provisionKey.md)

### ✓ P3 — Key Id Hidden Until Active

P3: Key ID hidden until active.

<details><summary>Formal property (Cryptol)</summary>

```haskell
(getStatus fleetEnabled hasKey False keyId).keyId == none
```

</details>

**Involved:** [`getStatus`](../functions/getStatus.md)

### P4 — Key Id Revealed When Active

P4: Key ID revealed when active.

<details><summary>Formal property (Cryptol)</summary>

```haskell
(getStatus fleetEnabled hasKey True keyId).keyId == some keyId
```

</details>

**Involved:** [`getStatus`](../functions/getStatus.md)

### P5 — Disabled Rejects All

P5: Disabled rejects all.

<details><summary>Formal property (Cryptol)</summary>

```haskell
isKeyVaultResult vaultResult ==>
isAuthResult authResult ==>
isActivationResult activationResult ==>
(provisionKey False validRequest vaultResult keyIsActive == PR_Disabled)
&& (enrollDevice False validMetadata authResult activationResult
== ER_Disabled)
```

</details>

**Involved:** [`ER_Disabled`](../types.md#enrollmentresult), [`PR_Disabled`](../types.md#provisionresult), [`enrollDevice`](../functions/enrollDevice.md), [`provisionKey`](../functions/provisionKey.md)
